--- a/src/styles.scss
+++ b/src/styles.scss
@@ -84,7 +84,7 @@ label {
     color: #FFF;
     text-align: center;
     border: none;
-    padding: 1.2vh;
+    padding: 15px;
     float: left;
     font-size: 1.5vh;
     margin: 5px 10px;
