--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -5,7 +5,7 @@
     </div>
     <div *ngIf="heroes.length > 0">
       <h1 class="title"><b>BUSCA MARVEL</b></h1>
-      <h2 class="subtitle mobile"></h2>
+      <h2 class="subtitle mobile">{{author}}</h2>
       <form>
         <label for="name">Nome do Personagem</label>
         <input type="text" id="nome" placeholder="Filtre por nome do personagem" [value]="name" (input)="name = $event.target.value">
